data/derived/fa15/progs/unify/prog1763.ml.out
Characters 112-131:
  |x when x>=10->(multHelper i t)::((x/10),(x mod 10))@[]
                                   ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list list
